# E-Waste-Disassembly-and-Sorting-System-simulation

./: .gitignore  README.md  pyproject.toml  setup_and_run.sh
configs/: default.yaml
notebooks/: 01_explore_sim.ipynb  02_data_pipeline.ipynb  03_safety_module.ipynb  04_model_training.ipynb  05_evaluation.ipynb
safedisassemble/: __init__.py
safedisassemble/data/: __init__.py  augmentation.py  demo_collector.py  trajectory.py
safedisassemble/evaluation/baselines/: scripted_baseline.py
safedisassemble/evaluation/benchmarks/: __init__.py  ewaste_bench.py
safedisassemble/evaluation/metrics/: __init__.py  disassembly_metrics.py
safedisassemble/models/: __init__.py  hierarchical_controller.py
safedisassemble/models/motor_policy/: __init__.py  diffusion_policy.py
safedisassemble/models/safety/: __init__.py  constraint_checker.py
safedisassemble/models/skill_selector/: __init__.py  selector.py
safedisassemble/models/task_planner/: __init__.py  planner.py
safedisassemble/sim/: __init__.py  device_registry.py
safedisassemble/sim/assets/xmls/: _combined_laptop_v1.xml  _combined_router_v1.xml  laptop_device.xml  robot_arm.xml  (+1 more)
safedisassemble/sim/envs/: __init__.py  disassembly_env.py
safedisassemble/training/: trainer.py
safedisassemble/training/configs/: __init__.py
scripts/: cinematic_demo.py  collect_demos.py  evaluate.py  run_full_pipeline.py  train.py  visualize_sim.py
tests/test_evaluation/: test_metrics.py
tests/test_models/: test_diffusion_policy.py  test_safety.py  test_skill_selector.py
tests/test_sim/: test_device_registry.py
