[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safedisassemble"
version = "0.1.0"
description = "Hierarchical Vision-Language-Action Planning for Safe and Generalizable E-Waste Disassembly"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mujoco>=3.1.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "scipy>=1.11.0",
    "h5py>=3.9.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
    "diffusers>=0.25.0",
    "mediapy>=1.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["safedisassemble*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
